--- a/frontend-app/index.html
+++ b/frontend-app/index.html
@@ -2,14 +2,14 @@
   <head>
     <title>HLJ Portal GUI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <script
+    <script
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
-    ></script> -->
+    ></script>
     <script type="module" src="main.js"></script>
     <!-- https://fontawesome.com/v4/get-started/ -->
-    <!-- <link rel="stylesheet" href="assets/css/font-awesome.min.css" /> -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/fa/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="utils/style.css" />
     <link rel="icon" href="assets/takodachi-ina.gif" />
   </head>
   <body>
