able to sift through different page

--- a/frontend-app/index.html
+++ b/frontend-app/index.html
@@ -17,6 +17,7 @@
     <div class="container">
       <div id="displayContent" class="columns-4"></div>
     </div>
+    <div id="pagination"></div>
   </body>
   <!-- Reference UI Design https://myfigurelist.com/price-drop/search -->
   <!-- <input type="text" placeholder="Search Text" id="search"> -->
